MaisSfdx/force-app/main/default/objects/Equipe__c/Equipe__c.object-meta.xml
<CustomObject>
    <description>Equipes do campeonato de Fórmula 1 .</description>
    <label>Equipe</label>
    <nameField>
        <label>Nome de Equipe</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Equipes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>