MaisSfdx/force-app/main/default/objects/Equipe__c/fields/Ativa__c.field-meta.xml
<CustomField>
    <fullName>Ativa__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Equipe incluída no campeonato.</description>
    <inlineHelpText>Equipe incluída no campeonato.</inlineHelpText>
    <label>Ativa</label>
    <type>Checkbox</type>
</CustomField>