MaisSfdx/force-app/main/default/objects/Equipe__c/fields/Motor__c.field-meta.xml
<CustomField>
    <fullName>Motor__c</fullName>
    <description>Qual motor esta equipe usa.</description>
    <inlineHelpText>Qual motor esta equipe usa.</inlineHelpText>
    <label>Motor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mercedes</fullName>
            </value>
            <value>
                <fullName>Honda</fullName>
            </value>
            <value>
                <fullName>Renault</fullName>
            </value>
            <value>
                <fullName>Ferrari</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>