MaisSfdx/force-app/main/default/objects/Equipe__c/fields/Patrocinadores__c.field-meta.xml
<CustomField>
    <fullName>Patrocinadores__c</fullName>
    <description>Principais patrocinadores das equipes.</description>
    <inlineHelpText>Principais patrocinadores das equipes.</inlineHelpText>
    <label>Patrocinadores</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Red Bull</fullName>
            </value>
            <value>
                <fullName>Petronas</fullName>
            </value>
            <value>
                <fullName>DHL</fullName>
            </value>
            <value>
                <fullName>Rothmanns</fullName>
            </value>
            <value>
                <fullName>Marlboro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>